--- a/App18.Material/Views/PageHome.xaml
+++ b/App18.Material/Views/PageHome.xaml
@@ -76,8 +76,8 @@
                                     <ControlTemplate TargetType="{x:Type ListViewItem}">
                                         <Border Margin="0,12,0,0" CornerRadius="4">
                                             <Grid>
-                                                <Border x:Name="PART_Back" Background="#FFF" Opacity="0.4"
-                                                        CornerRadius="4" />
+                                                <Border x:Name="PART_Back" Opacity="0.8" CornerRadius="4"
+                                                        Background="{DynamicResource MaterialDesignPaper}" />
                                                 <Grid Width="280" Margin="15,10,15,15">
                                                     <Grid.RowDefinitions>
                                                         <RowDefinition Height="Auto" />
@@ -115,7 +115,8 @@
                                                     </DockPanel>
 
                                                     <StackPanel Grid.Row="1">
-                                                        <TextBlock FontSize="15" FontWeight="DemiBold" Margin="5,0,5,5"
+                                                        <TextBlock x:Name="TxtTitle" FontSize="15"
+                                                                   FontWeight="DemiBold" Margin="5,0,5,5"
                                                                    Text="{Binding Subject}" />
 
                                                         <TextBlock VerticalAlignment="Top" Margin="5,0,0,0"
@@ -136,15 +137,13 @@
                                         <ControlTemplate.Triggers>
                                             <Trigger Property="IsMouseOver" Value="True">
                                                 <Setter TargetName="PART_Back" Property="Background"
-                                                        Value="{DynamicResource MaterialDesignPaper}" />
-                                                <Setter TargetName="PART_Back" Property="Opacity" Value="0.9" />
+                                                        Value="{Binding Foreground, ElementName=TxtTitle}" />
+                                                <Setter TargetName="PART_Back" Property="Opacity" Value="0.2" />
                                             </Trigger>
                                             <Trigger Property="IsSelected" Value="True">
                                                 <Setter TargetName="PART_Back" Property="Background"
-                                                        Value="{DynamicResource PrimaryHueMidBrush}" />
+                                                        Value="{DynamicResource PrimaryHueLightBrush}" />
                                                 <Setter TargetName="PART_Back" Property="Opacity" Value="0.8" />
-                                                <Setter Property="TextElement.Foreground"
-                                                        Value="{DynamicResource PrimaryHueDarkForegroundBrush}" />
                                             </Trigger>
                                         </ControlTemplate.Triggers>
                                     </ControlTemplate>
