App18:浅色暗色下背景一致-缺陷实现-优化

--- a/App18.Material/Views/MainWindow.xaml
+++ b/App18.Material/Views/MainWindow.xaml
@@ -13,6 +13,7 @@
         Background="Transparent"
         Title="Material 3" Height="720" Width="1200">
     <Grid>
+        <Grid Background="{DynamicResource MaterialDesignPaper}" />
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
