--- a/App11.HIK/Control/HikView.xaml
+++ b/App11.HIK/Control/HikView.xaml
@@ -45,7 +45,9 @@
         <WrapPanel VerticalAlignment="Bottom" Grid.Row="1">
             <Button x:Name="BtnShotJpeg" Content="抓图" Click="ButtonShotJpeg_OnClick" Margin="0,0,0,0" />
             <Button x:Name="BtnRecord" Content="开始录像" Click="ButtonRecord_OnClick" Margin="5,0,0,0" />
-            <TextBlock Text="{Binding NodeName}" />
+            <TextBlock Text="{Binding NodeName}"
+                       HorizontalAlignment="Left" VerticalAlignment="Center"
+                       Margin="5,0,0,0" />
             <TextBlock x:Name="TxtHikStatus" Text="未连接"
                        Foreground="{DynamicResource SystemControlForegroundAccentBrush}"
                        HorizontalAlignment="Left" VerticalAlignment="Center"
