--- a/App14.IASystem/Views/SplashWindow.xaml
+++ b/App14.IASystem/Views/SplashWindow.xaml
@@ -3,43 +3,26 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:cv="clr-namespace:App14.IASystem.Converter"
         mc:Ignorable="d"
-        Title="IA助手" Height="450" Width="600">
-    <Window.Resources>
-        <cv:NonEmpty2VisibleConverter x:Key="NonEmpty2VisibleConverter" />
-    </Window.Resources>
+        Title="IA助手" Height="450" Width="400">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <Grid Background="{DynamicResource SystemControlBackgroundChromeMediumLowBrush}" Grid.Row="0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>
-            <TextBlock Text="数据库文件:" FontWeight="Heavy" VerticalAlignment="Center" Margin="5,0,5,0" Grid.Column="0" />
-            <TextBlock x:Name="TxtPath" Text="" VerticalAlignment="Center" Grid.Column="1" />
-            <Button Content="选择" Margin="5" Click="ButtonSelect_OnClick" Grid.Column="2" />
-            <Button Content="详情" Margin="5" Click="ButtonDetail_OnClick" Grid.Column="3"
-                    IsEnabled="{Binding Text, ElementName=TxtPath, Converter={StaticResource NonEmpty2VisibleConverter}}" />
-        </Grid>
-
-        <Grid Grid.Row="1">
+        <Grid Grid.Row="0">
             <ScrollViewer>
                 <TextBlock x:Name="BlockConsole" FontFamily="Lucida Console" Margin="5" />
             </ScrollViewer>
         </Grid>
 
-        <WrapPanel HorizontalAlignment="Right" Grid.Row="2">
+        <WrapPanel HorizontalAlignment="Right" Grid.Row="1">
             <TextBlock Text="数据库操作:" FontWeight="Heavy" VerticalAlignment="Center" />
+            <Button Content="详情" Margin="5" Click="ButtonDetail_OnClick" />
             <Button Content="升级" Margin="5" Click="ButtonUpgrade_OnClick" IsEnabled="False" />
-            <Button Content="生成" Margin="5" Click="ButtonRege_OnClick" Style="{DynamicResource AccentButtonStyle}"
+            <Button Content="生成" Margin="5" Click="ButtonRege_OnClick"
+                    Style="{DynamicResource AccentButtonStyle}"
                     x:Name="BtnRege" />
             <Button Content="查看" Margin="5" Click="ButtonView_OnClick" />
         </WrapPanel>
