--- a/App01.VLC/View/MainWindow.xaml
+++ b/App01.VLC/View/MainWindow.xaml
@@ -6,29 +6,24 @@
         xmlns:wpf="clr-namespace:LibVLCSharp.WPF;assembly=LibVLCSharp.WPF"
         xmlns:vm="clr-namespace:App01.VLC.ViewModel"
         mc:Ignorable="d"
-        xmlns:ui="http://schemas.modernwpf.com/2019"
         d:DataContext="{d:DesignInstance vm:MainWindowViewModel, IsDesignTimeCreatable=True}"
         Title="App01: Vlc播放" Height="640" Width="1080">
     <Grid>
-        <wpf:VideoView x:Name="VideoView" 
-                       Background="{DynamicResource SystemControlBackgroundChromeBlackHighBrush}"
-                       Panel.ZIndex="1">
-            <WrapPanel ui:ThemeManager.RequestedTheme="Dark"
+        <wpf:VideoView x:Name="VideoView" Panel.ZIndex="1"
+                       Background="{DynamicResource SystemControlBackgroundChromeBlackHighBrush}">
+            <WrapPanel Background="{StaticResource MyGradientBrush}"
                        VerticalAlignment="Bottom" HorizontalAlignment="Left">
                 <StackPanel Orientation="Horizontal" >
                     <Button Content="PLAY" Margin="5"
-                            VerticalAlignment="Bottom" HorizontalAlignment="Left"
                             Command="{Binding CommandPlay}"
                             Click="PlayButton_Click" />
                     <Button Content="STOP" Margin="5"
-                            VerticalAlignment="Bottom" HorizontalAlignment="Left"
                             Command="{Binding CommandStop}"
                             Click="StopButton_Click" />
-                    <Border Height="25" Margin="5"
-                            VerticalAlignment="Bottom" HorizontalAlignment="Left">
-                        <TextBox x:Name="TextUrlInput" Width="250"
+                    <Border Height="25" Margin="5">
+                        <TextBox x:Name="TextUrlInput"
                                  Style="{DynamicResource SimpleTextBox}"
-                                 Text="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4" />
+                                 Text="rtmp://ns8.indexforce.com/home/mystream" />
                     </Border>
                 </StackPanel>
             </WrapPanel>
