--- a/App14.IASystem/Views/SplashWindow.xaml
+++ b/App14.IASystem/Views/SplashWindow.xaml
@@ -4,22 +4,16 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         mc:Ignorable="d"
-        Title="IA助手" Height="450" Width="400">
+        Title="IA助手" Height="150" Width="400">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-
-        <Grid Grid.Row="0">
-            <ScrollViewer>
-                <TextBlock x:Name="BlockConsole" FontFamily="Lucida Console" Margin="5" />
-            </ScrollViewer>
-        </Grid>
-
-        <WrapPanel HorizontalAlignment="Right" Grid.Row="1">
+        <WrapPanel HorizontalAlignment="Right" VerticalAlignment="Bottom">
             <TextBlock Text="数据库操作:" FontWeight="Heavy" VerticalAlignment="Center" />
-            <Button Content="详情" Margin="5" Click="ButtonDetail_OnClick" />
+            <Button Content="调试窗" Margin="5" Click="ButtonDebug_OnClick" />
+            <Button Content="！详情" Margin="5" Click="ButtonDetail_OnClick">
+                <Button.ToolTip>
+                    已知问题：导致生成无法使用,重启即恢复
+                </Button.ToolTip>
+            </Button>
             <Button Content="升级" Margin="5" Click="ButtonUpgrade_OnClick" IsEnabled="False" />
             <Button Content="生成" Margin="5" Click="ButtonRege_OnClick"
                     Style="{DynamicResource AccentButtonStyle}"
